# ELE4205_project

./: README.md
JayPilon-g1-vlsi413-odroid/: CMakeLists.txt  Doxyfile  Doxyfile.bak  odroid-deploy-gdb.sh  readme.md
JayPilon-g1-vlsi413-odroid/include/: button.h  camera.h  constants.h  gpio.h  morse.h  server.h
JayPilon-g1-vlsi413-odroid/src/: button.cpp  camera.cpp  gpio.cpp  main.cpp  morse.cpp  server.cpp
JayPilon-g1-vlsi413-poste/: CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md
JayPilon-g1-vlsi413-poste/include/: client.h  constants.h  qrreader.h
JayPilon-g1-vlsi413-poste/src/: client.cpp  main.cpp  qrreader.cpp
